[package]
description = "Create themes for VS Code with ease"
documentation = "https://docs.rs/mottle"
edition = "2021"
homepage = "https://github.com/arzg/mottle"
license = "MIT OR Apache-2.0"
name = "mottle"
repository = "https://github.com/arzg/mottle"
version = "0.5.0"

[dependencies]
indexmap = {version = "1.7", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
expect-test = "1.1"
pretty_assertions = "1.0"
